# dioxus-chrome-extension-template

./: .gitignore  Cargo.toml  README.md  manifest_v3.json  package.json
desktop/: Cargo.toml  Dioxus.toml  README.md
desktop/src/: main.rs
extension/: Cargo.toml  Dioxus.toml  README.md  build.bat  index.html  package-lock.json  package.json  webpack.config.js
extension/assets/: better-spider.css  main.css  manifest.json  sw.js
extension/manifest-v3/: manifest.json
extension/manifest-v3/js/: better_spider.css  content.js
extension/manifest-v3/src/: background.js  better-spider.css  content.js
extension/src/: doc.rs  error.rs  global.rs  lib.rs  main.rs  msg.rs  uitl.rs  ws.rs
extension/src/document/: mod.rs  mousemove.rs  mouseup.rs
extension/tests/: web.rs
