[package]
name = "desktop"
version = "0.1.0"
authors = ["lihuayong <lihy47@chinatelecom.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
# Debug
tracing = { workspace = true }
dioxus-logger = { workspace = true }
