[package]
name = "extension"
version = "0.1.0"
authors = ["leesen <lee.shyboy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
path = 'src/main.rs'
name = 'better-spider'


[dependencies]

dioxus = { workspace = true, features = ["web"] }

# Debug
tracing = { workspace = true }
dioxus-logger = { workspace = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "~0.1" }
wasm-bindgen = "~0.2"
gloo = { version = "~0.11.0", features = ["futures"] }
serde = { version = "~1.0.202", features = ["derive"] }
serde_json = { version = "~1.0.117", features = ["indexmap"] }
futures = "~0.3.30"

tokio = { version = "~1.37.0", features = ["sync", "macros"] }
wasm-bindgen-futures = "~0.4.42"
regex = "~1.10.4"
once_cell = "~1.19.0"
cubob = "~1.3.2"


[dependencies.web-sys]
version = "~0.3"
features = [
    'console',
    'Document',
    "Element",
    "HtmlElement",
    "SvgElement",
    "XPathExpression",
    "XPathResult",
    "DomTokenList",
    "Event",
    "EventListener",
    "EventTarget",
    "AddEventListenerOptions",
    "EventListenerOptions",
    "Node",
    "NodeList",
    "MouseEvent",
    "MouseScrollEvent",
    "WebSocket",
    "WebSocketElement",
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]
